[gd_scene load_steps=3 format=3 uid="uid://cqtvnp5fsd05c"]

[ext_resource type="Script" path="res://Menu Scripts/FamilyMenu.gd" id="1_1hqbd"]
[ext_resource type="PackedScene" uid="uid://bjtjttbpcagv1" path="res://GameObjects/FamilyMember.tscn" id="1_sq32s"]

[node name="FamilyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hqbd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 654.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 60.0
offset_bottom = 39.0
text = "<"

[node name="Ruler" parent="." instance=ExtResource("1_sq32s")]
layout_mode = 0
offset_left = 282.0
offset_top = 86.0
offset_right = 418.0
offset_bottom = 222.0

[node name="Spouse" parent="." instance=ExtResource("1_sq32s")]
layout_mode = 0
offset_left = 509.0
offset_top = 83.0
offset_right = 645.0
offset_bottom = 219.0

[node name="ChildOne" parent="." instance=ExtResource("1_sq32s")]
layout_mode = 0
offset_left = 62.0
offset_top = 404.0
offset_right = 198.0
offset_bottom = 540.0

[node name="ChildTwo" parent="." instance=ExtResource("1_sq32s")]
layout_mode = 0
offset_left = 281.0
offset_top = 408.0
offset_right = 417.0
offset_bottom = 544.0

[node name="ChildThree" parent="." instance=ExtResource("1_sq32s")]
layout_mode = 0
offset_left = 487.0
offset_top = 408.0
offset_right = 623.0
offset_bottom = 544.0

[node name="ChildFour" parent="." instance=ExtResource("1_sq32s")]
layout_mode = 0
offset_left = 679.0
offset_top = 409.0
offset_right = 815.0
offset_bottom = 545.0

[node name="MemberDisplay" type="Label" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 4.0
offset_right = 1145.0
offset_bottom = 409.0
autowrap_mode = 2
clip_text = true

[node name="MarryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 438.0
offset_right = 959.0
offset_bottom = 490.0
text = "Marry"

[node name="TryForChildButton" type="Button" parent="."]
layout_mode = 0
offset_left = 985.0
offset_top = 445.0
offset_right = 1094.0
offset_bottom = 493.0
text = "Try for child"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarryButton" to="." method="_on_marry_button_pressed"]
[connection signal="pressed" from="TryForChildButton" to="." method="_on_try_for_child_button_pressed"]
